Make takenote scale correctly between portrait and landscape orientation on mobile devices
Just uses screen width property instead of orientation because it is just a matter of scaling and it can be achieved using only screen width media queries that preserve proportions

--- a/src/notabene.css
+++ b/src/notabene.css
@@ -244,7 +244,7 @@ a:hover {
 	background-color: #DCE7F1;
 }
 
-@media all and (min-width: 480px) {
+@media all and (min-width: 500px) {
 	.note_title_container:before {
 		content: "";
 		position: absolute;
@@ -531,9 +531,8 @@ a:hover {
 	display: block;
 }
 
-
-/* iphone mode */
-@media screen and (orientation:portrait) and (max-width: 320px) {
+/* Below 500px - mobile devices */
+@media screen and (max-width:500px) {
 	.note_title {
 		padding: 0px;
 	}
@@ -544,7 +543,7 @@ a:hover {
 
 	.takenotedashboard,
 	.takenotecontainer {
-		width: 320px;
+		width: 100%;
 		font-size: 0.7em;
 	}
 
@@ -555,44 +554,16 @@ a:hover {
 	.takenotedashboard .footer,
 	#note,
 	.messageArea {
-		width: 300px;
+		width: 93.75%;
 	}
 
 	#cancelnote {
-		right: 145px; /* 320 / 2 - 15px (half width of cancel button) - 16px (padding on note_title) */
+		right: 45%; /* 320 / 2 - 15px (half width of cancel button) - 16px (padding on note_title) ~= 145px */
 	}
-
+	
 	.note_title,
 	.note_title_container {
-		width: 300px;
-		margin: auto;
-	}
-}
-
-/* portrait mode */
-@media screen and (orientation:portrait) and (min-width: 480px) {
-	.note_title {
-		padding: 0px;
-	}
-
-	.takenotedashboard,
-	.takenotecontainer {
-		width: 480px;
-	}
-
-	.takenotedashboard .footer,
-	#note,
-	.messageArea {
-		width: 460px;
-	}
-
-	#cancelnote {
-		right: 199px; /* 460 / 2 - 15px (half width of cancel button) - 16px (padding on note_title) */
-	}
-
-	.note_title,
-	.note_title_container {
-		width: 460px;
+		width: 100%;
 		margin: auto;
 	}
 }
